--- a/HackerRank.csproj
+++ b/HackerRank.csproj
@@ -11,6 +11,18 @@
       <None Update="practice\interview_preparation_kit\arrays\array_manipulation\test_case_12.txt">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
+      <None Update="practice\interview_preparation_kit\dictionaries_and_hashmaps\hash_tables_ransom_note\input00.txt">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="practice\interview_preparation_kit\dictionaries_and_hashmaps\hash_tables_ransom_note\input20.txt">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="practice\interview_preparation_kit\dictionaries_and_hashmaps\hash_tables_ransom_note\input21.txt">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="practice\interview_preparation_kit\dictionaries_and_hashmaps\two_strings\input.txt">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
     <ItemGroup>
