--- a/HackerRank.csproj
+++ b/HackerRank.csproj
@@ -11,6 +11,12 @@
       <None Update="practice\interview_preparation_kit\arrays\array_manipulation\test_case_12.txt">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
+      <None Update="practice\interview_preparation_kit\dictionaries_and_hashmaps\count_triplets\input2.txt">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="practice\interview_preparation_kit\dictionaries_and_hashmaps\count_triplets\input.txt">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
       <None Update="practice\interview_preparation_kit\dictionaries_and_hashmaps\hash_tables_ransom_note\input00.txt">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
