Interview Preparation Kit - Sorting - Bubble sort

--- a/HackerRank.csproj
+++ b/HackerRank.csproj
@@ -38,6 +38,9 @@
       <None Update="practice\interview_preparation_kit\dictionaries_and_hashmaps\two_strings\input.txt">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+      <None Update="practice\interview_preparation_kit\sorting\sorting_bubble_sort\input.txt">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
     <ItemGroup>
